# nonempty-collections

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
benches/: vec.rs
src/: array.rs  either.rs  either_ext.rs  index_map.rs  index_set.rs  iter.rs  itertools.rs  lib.rs  map.rs  prelude.rs  set.rs  slice.rs  vec2.rs  vector.rs
