[package]
name = "nonempty-collections"
version = "0.3.0"
description = "Correct-by-construction non-empty collections."
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/fosskers/nonempty-collections"
readme = "README.md"
keywords = ["nonempty", "vector", "set", "map"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
indexmap = { version = "2.7", optional = true }
either = { version = "1.0", optional = true }
itertools = { version = "0.14", optional = true, features = ["use_alloc"] }

[dev-dependencies]
serde_json = "1.0"
divan = "0.1"
maplit = "1.0"

[[bench]]
name = "vec"
harness = false

[lints.rust]
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_code = "allow"
unstable_features = "deny"
unused = { level = "warn", priority = -1 }
unused_crate_dependencies = "allow"    # too many false positives
unused_extern_crates = "allow"         # too many false positives
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "allow"
dead_code = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }
todo = "warn"
missing_const_for_fn = "warn"

### Pedantic
pedantic = { level = "warn", priority = -1 } # setting a lower priority for the group to allow individual overrides
module_name_repetitions = "allow"            # naming is hard enough already

[package.metadata.docs.rs]
all-features = true
