[package]
name = "nonempty-collections"
version = "0.3.1"
description = "Correct-by-construction non-empty collections."
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/fosskers/nonempty-collections"
readme = "README.md"
keywords = ["nonempty", "vector", "set", "map"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
indexmap = { version = "2.7", optional = true }
either = { version = "1.0", optional = true }
itertools = { version = "0.14", optional = true, features = ["use_alloc"] }

[dev-dependencies]
serde_json = "1.0"
divan = "0.1"
maplit = "1.0"

[[bench]]
name = "vec"
harness = false

[package.metadata.docs.rs]
all-features = true
