[package]
name = "nonempty-collections"
version = "1.3.0"
description = "Correct-by-construction non-empty collections."
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/fosskers/nonempty-collections"
readme = "README.md"
keywords = ["nonempty", "vector", "set", "map"]
categories = ["data-structures"]

[dependencies]
either = { version = "1.0", optional = true, default-features = false }
indexmap = { version = "2.7", optional = true, default-features = false }
itertools = { version = "0.14", optional = true, default-features = false }
rand = { version = "0.10", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["serde_derive"] }

[dev-dependencies]
serde_json = "1.0"
divan = "0.1"
maplit = "1.0"

[[bench]]
name = "vec"
harness = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
alloc = ["itertools?/use_alloc", "rand?/std", "serde?/alloc"]
std = [
  "alloc",
  "either?/std",
  "indexmap?/std",
  "itertools?/use_std",
  "rand?/std",
  "serde?/std",
]
